--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     
     <div class="container">
       <div class="seccion1">
-        <img src="/images/illustration-woman-online-mobile.svg" alt="img1">
-        <img src="/images/bg-pattern-mobile.svg" alt="shadow">
+        <img src="images/illustration-woman-online-mobile.svg" alt="img1">
+        <img src="images/bg-pattern-mobile.svg" alt="shadow">
       </div>
       <div class="seccion2">
         <h1>FAQ</h1>
     
         <details>
-          <summary>How many team members can I invite? <img class="arrow" src="/images/icon-arrow-down.svg" alt="arrow-down"></summary>
+          <summary>How many team members can I invite? <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow-down"></summary>
           <p>
             You can invite up to 2 additional users on the Free plan. There is no limit on
             team members for the Premium plan.
@@ -31,12 +31,12 @@
         </details>
         <hr>
         <details>
-          <summary>What is the maximum file upload size? <img class="arrow" src="/images/icon-arrow-down.svg" alt="arrow-down"></summary>
+          <summary>What is the maximum file upload size? <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow-down"></summary>
           <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
         </details>
         <hr>
         <details>
-          <summary>How do I reset my password? <img class="arrow" src="/images/icon-arrow-down.svg" alt="arrow-down"></summary>
+          <summary>How do I reset my password? <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow-down"></summary>
           <p>
             Click “Forgot password” from the login page or “Change password” from your profile page.
             A reset link will be emailed to you.
@@ -44,12 +44,12 @@
         </details>
         <hr>
         <details>
-          <summary>Can I cancel my subscription? <img class="arrow" src="/images/icon-arrow-down.svg" alt="arrow-down"></summary>
+          <summary>Can I cancel my subscription? <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow-down"></summary>
           <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
           </details>
           <hr>
           <details>
-            <summary>Do you provide additional support? <img class="arrow" src="/images/icon-arrow-down.svg" alt="arrow-down"></summary>
+            <summary>Do you provide additional support? <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow-down"></summary>
             <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
           </details>
           <hr>
